sets the height and width of the scrollbar to 0, resolves #163

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -71,9 +71,15 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
+
 html {
   overflow: scroll;
 }
+
 body {
   width: 100%;
   height: 100%;
